--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { 
-        font-family: 'Cormorant Garamond', serif;
-        background: #0c1929;
+        font-family: 'Outfit', sans-serif;
+        background: #f5f7fb;
+        color: #0f172a;
       }
     </style>
   </head>
