Add SEO metadata and discovery assets

--- a/index.html
+++ b/index.html
@@ -5,9 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tidal Calendar - Boat Scrubbing Planner</title>
     <meta name="description" content="UK tidal predictions with boat scrubbing day planner. Monthly calendar view with harmonic tide predictions.">
+    <meta name="application-name" content="Tidal Calendar" />
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="robots" content="index, follow" />
+    <meta name="keywords" content="UK tides, tidal predictions, boat scrubbing calendar, Admiralty API, tide planner" />
+    <link rel="canonical" href="https://tidalcalendar.app/" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Tidal Calendar | Boat Scrubbing Planner" />
+    <meta property="og:description" content="Plan boat scrubbing days with reliable UK tidal predictions, monthly calendar insights, and subscriber-only Admiralty API data." />
+    <meta property="og:url" content="https://tidalcalendar.app/" />
+    <meta property="og:image" content="/social-card.svg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tidal Calendar | Boat Scrubbing Planner" />
+    <meta name="twitter:description" content="Stay on top of UK tides with monthly planning, scrubbing windows, and Admiralty-backed predictions." />
+    <meta name="twitter:image" content="/social-card.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&family=Outfit:wght@300;400;500&display=swap" rel="stylesheet">
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Tidal Calendar",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web",
+        "description": "UK tidal predictions with a boat scrubbing calendar, harmonic forecasts, and subscriber-only Admiralty API data.",
+        "url": "https://tidalcalendar.app/",
+        "offers": {
+          "@type": "Offer",
+          "price": "5",
+          "priceCurrency": "GBP",
+          "description": "Subscriber access to Admiralty-backed tidal predictions and scrubbing schedules"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Tidal Calendar"
+        }
+      }
+    </script>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { 
