Add Google Ads script to index.html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         color: #0f172a;
       }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4438124146137884"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
