Revise title and description in index.html
Updated title and description meta tags for clarity.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tidal Calendar - Boat Scrubbing Planner</title>
-    <meta name="description" content="UK tidal predictions with boat scrubbing day planner. Monthly calendar view with harmonic tide predictions.">
+    <title>Boat Scrubbing Planner</title>
+    <meta name="description" content="UK tidal predictions with boat scrubbing day planner. Monthly calendar view with harmonic tide predictions and UK Admiralty tide tables.">
     <meta name="application-name" content="Tidal Calendar" />
     <meta name="theme-color" content="#0f172a" />
     <meta name="robots" content="index, follow" />
