Update URL in index.html for Tidal Calendar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         "applicationCategory": "UtilityApplication",
         "operatingSystem": "Web",
         "description": "UK tidal predictions with a boat scrubbing calendar, harmonic forecasts, and subscriber-only Admiralty API data.",
-        "url": "https://tidalcalendar.app/",
+        "url": "https://boatscrubcalendar.com/",
         "offers": {
           "@type": "Offer",
           "price": "5",
