--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#0f172a" />
     <meta name="robots" content="index, follow" />
     <meta name="keywords" content="UK tides, tidal predictions, boat scrubbing calendar, Admiralty API, tide planner" />
-    <link rel="canonical" href="https://tidalcalendar.app/" />
+    <link rel="canonical" href="https://boatscrubcalendar.com/" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Tidal Calendar | Boat Scrubbing Planner" />
