Add Google AdSense meta and script tags

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         color: #0f172a;
       }
     </style>
+    <meta name="google-adsense-account" content="ca-pub-4438124146137884">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4438124146137884"
      crossorigin="anonymous"></script>
   </head>
