Replace Vite build with esbuild

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/assets/bundle.js"></script>
   </body>
 </html>
